--- a/resources/fxml/registration.fxml
+++ b/resources/fxml/registration.fxml
@@ -28,7 +28,7 @@
       <RowConstraints maxHeight="130.0" minHeight="30.0" prefHeight="50.0" />
   </rowConstraints>
     <children>
-        <Label fx:id="lblText" GridPane.rowIndex="1">
+        <Label fx:id="lblRegistrationText" GridPane.rowIndex="1">
             <font>
                 <Font size="18.0" />
             </font>
@@ -38,7 +38,7 @@
         <TextField fx:id="fldFirstName" GridPane.columnIndex="1" GridPane.rowIndex="2" />
         <TextField fx:id="fldLastName" GridPane.columnIndex="1" GridPane.rowIndex="3" />
         <Label text="Email adresa:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <TextField fx:id="fldEmail"  GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <TextField fx:id="fldEmail" GridPane.columnIndex="1" GridPane.rowIndex="4" />
         <Label text="Korisničko ime:" GridPane.columnIndex="0" GridPane.rowIndex="5" />
         <Label text="Lozinka:" GridPane.columnIndex="0" GridPane.rowIndex="6" />
         <TextField fx:id="fldUsername" GridPane.columnIndex="1" GridPane.rowIndex="5" />
