--- a/resources/fxml/employeePage.fxml
+++ b/resources/fxml/employeePage.fxml
@@ -150,7 +150,7 @@
                      </opaqueInsets></GridPane>
             </content>
           </Tab>
-            <Tab text="Klijenti">
+            <Tab fx:id="tabClients" text="Klijenti">
                 <content>
                     <GridPane minHeight="0.0" minWidth="0.0" prefHeight="299.0" prefWidth="781.0">
                         <columnConstraints>
