--- a/resources/fxml/addReservation.fxml
+++ b/resources/fxml/addReservation.fxml
@@ -35,7 +35,7 @@
    <children>
       <Label text="Vozilo:" GridPane.columnIndex="1" />
        <TextField fx:id="fldSearchVehicle" promptText="search: e.g. Audi" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-       <ChoiceBox fx:id="choiceFilterVehicle" GridPane.rowIndex="1" GridPane.columnIndex="1" onAction="#changeFilterVehicle" value="Svi">
+       <ChoiceBox fx:id="choiceFilterVehicle" onAction="#changeFilterVehicle" value="Svi" GridPane.columnIndex="1" GridPane.rowIndex="1">
            <items>
                <FXCollections fx:factory="observableArrayList">
                    <String fx:value="Svi" />
@@ -52,7 +52,7 @@
       </Separator>
       <Label text="Klijent:" GridPane.columnIndex="4" />
        <TextField fx:id="fldSearchClient" promptText="search: e.g. Mujo" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-       <ChoiceBox fx:id="choiceFilterClient" GridPane.rowIndex="1" GridPane.columnIndex="4" onAction="#changeFilterClient" value="Svi">
+       <ChoiceBox fx:id="choiceFilterClient" onAction="#changeFilterClient" value="Svi" GridPane.columnIndex="4" GridPane.rowIndex="1">
            <items>
                <FXCollections fx:factory="observableArrayList">
                    <String fx:value="Svi" />
@@ -128,7 +128,7 @@
       </ChoiceBox>
       <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="5" GridPane.rowIndex="10">
         <buttons>
-          <Button mnemonicParsing="false" onAction="#confirmAddReservationAction" text="OK" />
+          <Button mnemonicParsing="false" onAction="#confirmAddReservationAction" text="Potvrdi" />
             <Button mnemonicParsing="false" onAction="#cancelAddReservationAction" text="Odustani" />
         </buttons>
       </ButtonBar>
