--- a/resources/fxml/employeePage.fxml
+++ b/resources/fxml/employeePage.fxml
@@ -100,7 +100,7 @@
                      </children></GridPane>
             </content>
           </Tab>
-          <Tab text="Rezervacije">
+          <Tab fx:id="tabReservations" text="Rezervacije">
             <content>
                 <GridPane minHeight="0.0" minWidth="0.0" prefHeight="299.0" prefWidth="781.0">
                     <columnConstraints>
