--- a/resources/fxml/priceRenting.fxml
+++ b/resources/fxml/priceRenting.fxml
@@ -3,43 +3,48 @@
 <?import java.net.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="194.0" prefWidth="625.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/rentacar.css" />
     </stylesheets>
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="246.0" minWidth="10.0" prefWidth="165.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="374.0" minWidth="10.0" prefWidth="216.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="338.0" minWidth="0.0" prefWidth="171.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="246.0" minWidth="10.0" prefWidth="162.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="374.0" minWidth="0.0" prefWidth="144.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="374.0" minWidth="9.0" prefWidth="130.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="700.0" minWidth="0.0" prefWidth="234.0" />
       <ColumnConstraints />
   </columnConstraints>
   <rowConstraints>
       <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="40.0" minHeight="10.0" prefHeight="40.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="74.0" minHeight="10.0" prefHeight="54.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="80.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="80.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-       <Label text="Datum preuzimanja vozila:" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
+       <Label fx:id="lblText" text="Datum preuzimanja vozila:" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
        <Label text="Datum vraćanja vozila:" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
        <DatePicker fx:id="datePickup" onAction="#changeDate" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
        <DatePicker fx:id="dateReturn" onAction="#changeDate" prefHeight="25.0" prefWidth="134.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-      <ButtonBar prefHeight="40.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
+      <ButtonBar prefHeight="164.0" prefWidth="257.0" GridPane.columnIndex="3" GridPane.rowIndex="5">
         <buttons>
-          <Button fx:id="btnReservation" mnemonicParsing="false" onAction="#reservationAction" text="Rezerviši" />
+          <Button fx:id="btnReservationFromPrice" mnemonicParsing="false" onAction="#reservationAction" text="Rezerviši" />
             <Button fx:id="btnBack" mnemonicParsing="false" onAction="#backAction" text="Nazad" />
         </buttons>
       </ButtonBar>
-      <Label fx:id="lblPrice" text="Ukupna cijena iznosi:" GridPane.rowIndex="3" />
-      <TextField fx:id="fldPrice" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="102.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+      <Label fx:id="lblPrice" text="Ukupna cijena iznosi:" GridPane.rowIndex="4" />
+      <TextField fx:id="fldPrice" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="25.0" prefWidth="102.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
       <Label fx:id="lblVehicleName">
          <font>
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
+      <ImageView fx:id="imageViewVehicleFromPrice" fitHeight="199.0" fitWidth="218.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowSpan="5" />
    </children>
    <padding>
       <Insets bottom="5.0" left="5.0" right="55.0" top="5.0" />
