--- a/resources/fxml/employeePage.fxml
+++ b/resources/fxml/employeePage.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="380.0" prefWidth="915.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/rentacar.css" />
     </stylesheets>
@@ -26,7 +26,7 @@
    <children>
        <MenuBar prefHeight="25.0" prefWidth="347.0" GridPane.columnSpan="1" GridPane.rowIndex="0">
            <menus>
-               <Menu mnemonicParsing="false" text="File">
+               <Menu fx:id="file" mnemonicParsing="false" text="File">
                    <items>
                        <Menu mnemonicParsing="false" text="Izvještaji">
                      <items>
@@ -36,12 +36,12 @@
                          <MenuItem mnemonicParsing="false" onAction="#employeeReportAction" text="Zaposlenici" />
                      </items>
                        </Menu>
+                       <MenuItem fx:id="btnLogOut" mnemonicParsing="false" onAction="#logOutAction" text="Odjavi se" />
                    </items>
                </Menu>
-               <Menu mnemonicParsing="false" text="Profil" fx:id="profil">
+               <Menu fx:id="profil" mnemonicParsing="false" text="Profil">
                    <items>
                        <MenuItem fx:id="btnEditProfilEmployee" mnemonicParsing="false" onAction="#editProfilAction" text="Uredi profil" />
-                       <MenuItem fx:id="btnLogOut" mnemonicParsing="false" onAction="#logOutAction" text="Odjavi se" />
                    </items>
                </Menu>
                <Menu fx:id="menuHelp" mnemonicParsing="false" text="Pomoć">
