--- a/resources/fxml/priceRenting.fxml
+++ b/resources/fxml/priceRenting.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="704.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <stylesheets>
         <URL value="@/css/rentacar.css" />
     </stylesheets>
@@ -44,6 +44,10 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
+       <Label fx:id="lblImage" text="Fotografija vozila: " GridPane.columnIndex="3" GridPane.rowIndex="4">
+         <GridPane.margin>
+            <Insets top="25.0" />
+         </GridPane.margin></Label>
       <ImageView fx:id="imageViewVehicleFromPrice" fitHeight="199.0" fitWidth="218.0" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="3" GridPane.columnSpan="2" GridPane.rowSpan="5" />
    </children>
    <padding>
